--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@
 /config/database.yml
 /config/credentials.yml.enc
 /test
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
